--- a/MyDish/Base.lproj/Main.storyboard
+++ b/MyDish/Base.lproj/Main.storyboard
@@ -477,9 +477,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6Zq-0c-FsD">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6Zq-0c-FsD">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qC2-V5-6L4">
                                     <size key="itemSize" width="375" height="326"/>
@@ -496,6 +495,12 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Zq-0c-FsD" firstAttribute="top" secondItem="dIT-8r-WJW" secondAttribute="top" constant="20" symbolic="YES" id="2GS-or-P1I"/>
+                            <constraint firstItem="6Zq-0c-FsD" firstAttribute="bottom" secondItem="A4A-Cf-UKi" secondAttribute="bottom" id="QWh-us-i0V"/>
+                            <constraint firstItem="6Zq-0c-FsD" firstAttribute="trailing" secondItem="A4A-Cf-UKi" secondAttribute="trailing" id="haR-nm-859"/>
+                            <constraint firstItem="6Zq-0c-FsD" firstAttribute="leading" secondItem="A4A-Cf-UKi" secondAttribute="leading" id="pmz-Mk-FUF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="A4A-Cf-UKi"/>
                     </view>
                     <navigationItem key="navigationItem" id="AuQ-Co-GU9"/>
